--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -694,10 +694,25 @@ a {
 .cid-shwkZOeqG5 .mbr-section-title {
   color: #ffffff;
 }
-.cid-shwn185LHN {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+.cid-shLHRb608C {
+  padding-top: 2rem;
+  padding-bottom: 0rem;
   background-color: #ffffff;
+}
+.cid-shLHRb608C blockquote {
+  border-color: #ffe161;
+  border-radius: 4px;
+  background-color: #fafafa;
+}
+.cid-shLI5guGmN {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-shLI5guGmN blockquote {
+  border-color: #ffe161;
+  border-radius: 4px;
+  background-color: #fafafa;
 }
 .cid-shwp4phRWM {
   padding-top: 1rem;
@@ -709,8 +724,14 @@ a {
   padding-bottom: 5rem;
   background-image: url("../../../assets/images/mbr-2.jpg");
 }
+.cid-shwpO7eSnH .mbr-section-title {
+  color: #ffffff;
+}
+.cid-shwpO7eSnH .mbr-section-subtitle {
+  color: #ffffff;
+}
 .cid-shwqqC19kq {
-  padding-top: 2rem;
+  padding-top: 5rem;
   padding-bottom: 3rem;
   background-color: #ffffff;
 }
@@ -720,18 +741,36 @@ a {
   height: 2px;
   margin: 0 auto;
 }
-.cid-shwrkklrRN {
-  padding-top: 3rem;
+.cid-shLJdfdvPT {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+@media (max-width: 991px) {
+  .cid-shLJdfdvPT .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-shLJdfdvPT img {
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-shLJdfdvPT .text-wrapper {
+    padding: 2rem;
+  }
+}
+.cid-shLKkmShKM {
+  padding-top: 2rem;
   padding-bottom: 1rem;
   background-color: #ffffff;
 }
-.cid-shwsfNsg8o {
-  padding-top: 2rem;
-  padding-bottom: 3rem;
-  background-color: #ffffff;
+.cid-shLKkmShKM blockquote {
+  border-color: #ffe161;
+  border-radius: 4px;
+  background-color: #fafafa;
 }
 .cid-shwwtaPsvN {
-  padding-top: 5rem;
+  padding-top: 1rem;
   padding-bottom: 5rem;
   background-color: #ffffff;
 }
@@ -748,7 +787,7 @@ a {
   position: absolute;
   left: -1.6rem;
   content: "\2022";
-  color: #6592e6;
+  color: #e6c63b;
   font-weight: bold;
   font-size: 2rem;
   width: 1.6rem;
@@ -915,7 +954,7 @@ a {
 }
 .cid-shwGaB1eDz {
   padding-top: 0rem;
-  padding-bottom: 6rem;
+  padding-bottom: 1rem;
   background-color: #fafafa;
 }
 .cid-shwGaB1eDz img,
@@ -975,7 +1014,7 @@ a {
   color: #bbbbbb;
 }
 .cid-shxoIQ58J8 {
-  padding-top: 5rem;
+  padding-top: 2rem;
   padding-bottom: 5rem;
   background-color: #ffffff;
 }
