--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -830,6 +830,63 @@ a {
   border-radius: 4px;
   background-color: #fafafa;
 }
+.cid-si9jtMxakK {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-si9jtMxakK img,
+.cid-si9jtMxakK .item-img {
+  width: 100%;
+}
+.cid-si9jtMxakK .item:focus,
+.cid-si9jtMxakK span:focus {
+  outline: none;
+}
+.cid-si9jtMxakK .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-si9jtMxakK .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fff0b0;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-si9jtMxakK .item-wrapper .item-content {
+    padding: 2rem 2rem 0;
+  }
+  .cid-si9jtMxakK .item-wrapper .item-footer {
+    padding: 0 2rem 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-si9jtMxakK .item-wrapper .item-content {
+    padding: 1rem 1rem 0;
+  }
+  .cid-si9jtMxakK .item-wrapper .item-footer {
+    padding: 0 1rem 1rem;
+  }
+}
+.cid-si9jtMxakK .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-si9jtMxakK .mbr-section-title {
+  color: #232323;
+}
+.cid-si9jtMxakK .mbr-text,
+.cid-si9jtMxakK .mbr-section-btn {
+  text-align: left;
+}
+.cid-si9jtMxakK .item-title {
+  text-align: left;
+}
+.cid-si9jtMxakK .item-subtitle {
+  text-align: left;
+}
 .cid-shwMAYQZne {
   padding-top: 3rem;
   padding-bottom: 0rem;
@@ -891,67 +948,6 @@ a {
   text-align: left;
   color: #bbbbbb;
 }
-.cid-shwDj79L1p {
-  padding-top: 3rem;
-  padding-bottom: 1rem;
-  background-color: #fafafa;
-}
-.cid-shwDj79L1p img,
-.cid-shwDj79L1p .item-img {
-  width: 100%;
-  height: 100%;
-  height: 300px;
-  object-fit: cover;
-}
-.cid-shwDj79L1p .item:focus,
-.cid-shwDj79L1p span:focus {
-  outline: none;
-}
-.cid-shwDj79L1p .item {
-  cursor: pointer;
-  margin-bottom: 2rem;
-}
-.cid-shwDj79L1p .item-wrapper {
-  position: relative;
-  border-radius: 4px;
-  background: #fff0b0;
-  height: 100%;
-  display: flex;
-  flex-flow: column nowrap;
-}
-@media (min-width: 992px) {
-  .cid-shwDj79L1p .item-wrapper .item-content {
-    padding: 2rem 2rem 0;
-  }
-  .cid-shwDj79L1p .item-wrapper .item-footer {
-    padding: 0 2rem 2rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-shwDj79L1p .item-wrapper .item-content {
-    padding: 1rem 1rem 0;
-  }
-  .cid-shwDj79L1p .item-wrapper .item-footer {
-    padding: 0 1rem 1rem;
-  }
-}
-.cid-shwDj79L1p .mbr-section-btn {
-  margin-top: auto !important;
-}
-.cid-shwDj79L1p .mbr-section-title {
-  color: #232323;
-}
-.cid-shwDj79L1p .mbr-text,
-.cid-shwDj79L1p .mbr-section-btn {
-  text-align: left;
-}
-.cid-shwDj79L1p .item-title {
-  text-align: left;
-}
-.cid-shwDj79L1p .item-subtitle {
-  text-align: left;
-  color: #bbbbbb;
-}
 .cid-shwGaB1eDz {
   padding-top: 0rem;
   padding-bottom: 1rem;
@@ -1010,6 +1006,67 @@ a {
   text-align: left;
 }
 .cid-shwGaB1eDz .item-subtitle {
+  text-align: left;
+  color: #bbbbbb;
+}
+.cid-shwDj79L1p {
+  padding-top: 0rem;
+  padding-bottom: 1rem;
+  background-color: #fafafa;
+}
+.cid-shwDj79L1p img,
+.cid-shwDj79L1p .item-img {
+  width: 100%;
+  height: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+.cid-shwDj79L1p .item:focus,
+.cid-shwDj79L1p span:focus {
+  outline: none;
+}
+.cid-shwDj79L1p .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-shwDj79L1p .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fff0b0;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-shwDj79L1p .item-wrapper .item-content {
+    padding: 2rem 2rem 0;
+  }
+  .cid-shwDj79L1p .item-wrapper .item-footer {
+    padding: 0 2rem 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-shwDj79L1p .item-wrapper .item-content {
+    padding: 1rem 1rem 0;
+  }
+  .cid-shwDj79L1p .item-wrapper .item-footer {
+    padding: 0 1rem 1rem;
+  }
+}
+.cid-shwDj79L1p .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-shwDj79L1p .mbr-section-title {
+  color: #232323;
+}
+.cid-shwDj79L1p .mbr-text,
+.cid-shwDj79L1p .mbr-section-btn {
+  text-align: left;
+}
+.cid-shwDj79L1p .item-title {
+  text-align: left;
+}
+.cid-shwDj79L1p .item-subtitle {
   text-align: left;
   color: #bbbbbb;
 }
@@ -1361,6 +1418,111 @@ a {
   }
 }
 .cid-shxmYBTkYP .image-wrapper img {
+  width: 100%;
+  object-fit: cover;
+}
+.cid-sifiwiPUPe {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-sifiwiPUPe .content-wrapper {
+  background: #fafafa;
+}
+@media (max-width: 991px) {
+  .cid-sifiwiPUPe .content-wrapper .image-wrapper {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-sifiwiPUPe .content-wrapper {
+    padding: 1rem;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .cid-sifiwiPUPe .content-wrapper {
+    padding: 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-sifiwiPUPe .content-wrapper {
+    padding: 5rem 3rem;
+  }
+  .cid-sifiwiPUPe .content-wrapper .text-wrapper {
+    padding-left: 2rem;
+  }
+}
+.cid-sifiwiPUPe .image-wrapper img {
+  width: 100%;
+  object-fit: cover;
+}
+.cid-soEi6zLFVA {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-soEi6zLFVA .content-wrapper {
+  background: #fafafa;
+}
+@media (max-width: 991px) {
+  .cid-soEi6zLFVA .content-wrapper .image-wrapper {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-soEi6zLFVA .content-wrapper {
+    padding: 1rem;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .cid-soEi6zLFVA .content-wrapper {
+    padding: 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-soEi6zLFVA .content-wrapper {
+    padding: 5rem 3rem;
+  }
+  .cid-soEi6zLFVA .content-wrapper .text-wrapper {
+    padding-left: 2rem;
+  }
+}
+.cid-soEi6zLFVA .image-wrapper img {
+  width: 100%;
+  object-fit: cover;
+}
+.cid-soElFXB069 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-soElFXB069 .content-wrapper {
+  background: #fafafa;
+}
+@media (max-width: 991px) {
+  .cid-soElFXB069 .content-wrapper .image-wrapper {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-soElFXB069 .content-wrapper {
+    padding: 1rem;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .cid-soElFXB069 .content-wrapper {
+    padding: 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-soElFXB069 .content-wrapper {
+    padding: 5rem 3rem;
+  }
+  .cid-soElFXB069 .content-wrapper .text-wrapper {
+    padding-left: 2rem;
+  }
+}
+.cid-soElFXB069 .image-wrapper img {
   width: 100%;
   object-fit: cover;
 }
